# python_travelmanager

./: .pre-commit-config.yaml  .pypirc  LICENSE  README.md  buildspec.yml  pyproject.toml  requirements_dev.txt
tests/integration/modules/: test_booking.py
tests/unit/: test_travelmanager_api.py
tests/unit/modules/: test_availability.py  test_booking.py  test_relation.py  test_station.py
tests/utils/: __init__.py
travelmanager/: travelmanager_api.py
travelmanager/modules/: booking.py
